# rea-playspace

./: .gitignore  App.css  App.js  Cargo.toml  DEVELOP.md  EconomicResourceList.tsx  README.md  default.nix  dev-setup.md  package-lock.json  package.json  pm2.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml  test.yml
components/: AddCommitmentModal.js  AddProcessModal.js  MainPanelHeader.tsx
components/modals/: AddCommitmentModal.js  BlankAddModal.tsx
components/nodes/: ProcessNode.js  ProcessNode.tsx
crates/profiles/: Cargo.toml
crates/types/: Cargo.toml
crates/zome/: README.md
crates/zome/src/: handlers.rs  lib.rs
dna/tests/: Cargo.toml
dna/tests/src/: lib.rs
dna/workdir/: dna.yaml
dna/zomes/profiles/: Cargo.toml
dna/zomes/projects/: Cargo.toml
dna/zomes/zomeA/: Cargo.toml
dna/zomes/zome_a/: Cargo.toml
dna/zomes/zome_a/src/: lib.rs
docs/_data/: footer.json  site.cjs
docs/guides/backend/: index.md  types.md  zome.md
docs/guides/frontend/: hrea-modeler-store.md  index.md
docs/guides/setting-up/: adding-the-frontend.md
electron/: afterSignHook.js  package-lock.json  package.json  pnpm-lock.yaml
electron/src/: holochain.ts  index.ts
environments/: .env  .env.dev2
happ/tests/: Cargo.toml
happ/tests/src/: lib.rs
happ/workdir/: application.dna  application.happ  dna.yaml  happ.yaml
happ/zomes/ping/: Cargo.toml
happ/zomes/ping/src/: lib.rs
happ/zomes/profiles/: Cargo.toml
happ/zomes/profiles_core/: Cargo.toml
happ/zomes/projects/: Cargo.toml
happ/zomes/projects/src/: data.rs  lib.rs  test.rs  tree_clean.rs
happ/zomes/projects/src/project/: handlers.rs  mod.rs
happ/zomes/projects_core/: Cargo.toml
happ/zomes/projects_core/src/: lib.rs
happ/zomes/zome_a/: Cargo.toml
happ/zomes/zome_a/src/: lib.rs
hooks/: useEconomicResources.ts
hrea-modeler/: .gitignore  README.md  default.nix  package.json  rocket.config.js
hrea-modeler/crates/types/: README.md
hrea-modeler/crates/zome/: Cargo.toml
hrea-modeler/crates/zome/src/: utils.rs
hrea-modeler/docs/: .eleventyignore  index.md
hrea-modeler/docs/_assets/: variables.css  webmanifest.json
hrea-modeler/docs/guides/: index.md
hrea-modeler/ui/src/: config.ts  hrea-modeler-service.ts  hrea-modeler-store.ts  mocks.ts  shim.d.ts
layout/: DefaultLayout.js
modules/data-providers/: README.md  package.json  tsconfig.json  vite.config.js  vite.config.ts
modules/data-providers/src/: index.ts
modules/data-providers/test/: WithPath.spec.ts  buildModel.spec.ts  fixtures.ts  localstore.spec.ts  mergeTrees.spec.ts  project.spec.ts  walkTreeDefinition.spec.ts
modules/store-adaptors/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
modules/store-adaptors/src/: index.ts  useStore.ts  wrapReadable.ts
modules/typed-object-tweezers/: README.md  package.json  tsconfig.json  vite.config.js  vite.config.ts
modules/typed-object-tweezers/src/: index.ts
modules/typed-object-tweezers/test/: helpers.spec.ts  toJSON.spec.ts  traversals.spec.ts  tsconfig.json
modules/valueflows-models/: README.md  jest.config.mjs  package.json  vite.config.js  vite.config.ts
modules/valueflows-models/src/: Accounting.ts  Common.ts  Knowledge.ts  Observation.ts  Plan.ts  index.ts
modules/valueflows-models/test/: accounting.spec.ts
modules/yaati/: README.md  package.json  tsconfig.json  vite.config.js  vite.config.ts
modules/yaati/src/: ReactHook.ts  SubscriberList.ts  TreeIndex.ts  TreeStore.ts  WithProviders.ts  index.ts
modules/yaati/test/: TreeIndex.spec.ts  TreeStore.spec.ts  fixtures.ts
nix/: sources.json
routes/: FlowLayout.tsx  NewResource.tsx
scripts/: build.sh  dna-pack.sh  happ-pack.sh  happ-run.sh  happ-test.sh  shuffle-happ.sh
tests/: package-lock.json  package.json  pnpm-lock.yaml
tests/src/: index.ts  utils.ts
ui/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  web-dev-server.config.mjs  web-dev.plugins.mjs  web-test-runner.config.mjs
ui/demo/: index.html
ui/public/: splashscreen.css  splashscreen.html
ui/src/: App.css  App.tsx  AppConf.ts  Home.tsx  StateMachine.ts  constants.ts  context.ts  elements.ts  hcWebsockets.ts  holochain-app.ts  holochainConf.ts  hrea-app.ts  hrea-modeler.ts  index.ts  index.tsx  modeler-store.ts  types.ts  utils.ts
ui/src/api/: callZome.ts  zomeApi.ts
ui/src/components/: PalletNode.tsx  ProfileComponents.ts  ProfilePrompt.tsx  ResourceTransfer.tsx  util.ts
ui/src/data/: Connection.ts  DataStore.ts  DataStoreBase.ts  ProfilesStore.ts  YatiReactContext.ts  YatiReactHook.ts  YatiTreeStore.ts  store.ts  utils.ts
ui/src/definitions/: agent-avatar.ts  create-hrea-modeler.ts  my-hrea-modeler.ts  search-agent.ts
ui/test/: elements.test.js
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.dev.js  webpack.prod.js
web/environments/: .env  .env.dev2
web/src/: App.tsx  CreateEconomicResource.tsx  Home.tsx  LeftScreenNavMenu.tsx  ResourceListTableItem.tsx  hcWebsockets.ts  holochainConf.ts  holochainConfig.ts  holochainTypes.ts  index.tsx  service.ts  simpleZomeClient.ts  utils.ts
workdir/: happ.yaml  web-happ.yaml
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
workflows/: release.yml
(+176 files in other folders)
