[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "Types for the hc_zome_hrea_modelers zome"
documentation = "https://holochain-open-dev.github.io/hrea_modeler"
edition = "2018"
homepage = "https://docs.rs/hc_zome_hrea_modelers_types"
license = "MIT"
name = "hc_zome_hrea_modelers_types"
repository = "https://github.com/holochain-open-dev/hrea_modeler"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_hrea_modelers_types"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.121", features = ["encoding"]}
