[package]
name = "tests"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
# hdk_crud = "0.5.3" # TODO: update
holo_hash = { version = "=0.0.19", features = ["encoding", "fixturators"] }
hdk = "0.0.122"
# hdk_unit_testing = { version = "0.1.1" } # TODO: update
zome_a = { path = "../zomes/zome_a" }
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"
mockall = "0.9"
assert_matches = "1.5.0"

[dev-dependencies]
fixt = "0.0.7"
holochain_types = "0.0.26"
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
default = ["mock"]
mock = ["hdk/mock", "hdk/test_utils"]
