[package]
edition = "2018"
name = "ping"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ping"

[dependencies]
serde = "1"
derive_more = "0"
chrono = {version = "0.4", features = ["serde"]}

hdk = {version = "0.0.136", features = ["encoding"]}
holo_hash = { version = "=0.0.27", features = ["encoding", "fixturators"] }
hc_zome_profiles_types = { git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.136", package = "hc_zome_profiles_types" }
