[package]
edition = "2018"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk = {version = "0.0.142", features = ["encoding"]}
projects_core = { path = "../projects_core" }
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0"
serde = "*"
paste = "*"
tracing = "0.1.26"
