[package]
edition = "2018"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk = {version = "0.0.142", features = ["encoding"]}
projects_core = { path = "../projects_core" }
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0"
serde = "*"
paste = "*"
tracing = "0.1.26"


# hdk = {version = "0.0.136", features = ["encoding"]}
# holo_hash = { version = "=0.0.27", features = ["encoding", "fixturators"] }
# hc_zome_profiles_types = { git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.136", package = "hc_zome_profiles_types" }

