[package]
authors = ["eric@harris-braun.com", "jill@adaburrows.com", "shane.odonnell@steeltoad.io"]
edition = "2021"
name = "projects"
version = "0.0.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk = {version = "0.1.1", features = ["encoding"]}
projects_core = { path = "../projects_core" }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
serde = "*"
paste = "*"
tracing = "0.1.26"

