[package]
authors = ["eric@harris-braun.com", "jill@adaburrows.com", "shane.odonnell@steeltoad.io"]
edition = "2021"
name = "projects_core"
version = "0.0.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects_core"

[dependencies]
serde = "1"
derive_more = "0"
hdk = {version = "0.1.1", features = ["encoding"]}
hdi = {version = "0.2.1"}

