[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "HreaModeler zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/hrea_modeler"
edition = "2018"
homepage = "https://docs.rs/hc_zome_hrea_modelers"
license = "MIT"
name = "hc_zome_hrea_modelers"
repository = "https://github.com/holochain-open-dev/hrea_modeler"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_hrea_modelers"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_hrea_modelers_types = {path = "../types"}
hdk = {version = "0.0.121", features = ["encoding"]}
